--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
@@ -18,7 +18,9 @@
         <button onclick="hilfe()" id="hilfeImg" style="border:none"><img src="/Image/help.png" width="60" hight="60" /></button>
         <h2>Füllen Sie den Konfigurator mit Daten aus!</h2>
     </div>
+    <div id="TypeSchlusselPlan">
 
+    </div>
     <form asp-action="SaveOrder" enctype="multipart/form-data" id="content" asp-controller="Konfigurator">
   
         @Html.HiddenFor(m => m.userKey)
