--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
@@ -19,7 +19,8 @@
         <h2>Füllen Sie den Konfigurator mit Daten aus!</h2>
     </div>
     <div id="TypeSchlusselPlan">
-
+        <div> <img src="@("/Image/free-icon-house-with-lock-outline-on-a-circular-black-background-20177.png")" height="50" width="50" /></div>
+        <div> <img src="@("/Image/free-icon-smart-lock-1348357.png")" height="50" width="50" /></div>
     </div>
     <form asp-action="SaveOrder" enctype="multipart/form-data" id="content" asp-controller="Konfigurator">
   
