--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
@@ -89,8 +89,17 @@
                                     <input name="Options" value="@options.Name" id="opt" class="form-control" />
                                 </div>
                                 <div class="form-group">
+                                    <label class="control-label">Options Image</label>
+                                    <input name="ImageNameOption" type="text" value="@options.ImageName" id="opt" class="form-control" />
+                                    <br />
+                                    <img src="@("/Image/"+@options.ImageName)" height="300" width="300" />
+                                    <br />
+                                </div>
+                                <div class="form-group">
                                     <label class="control-label">Description</label>
-                                    <input name="Descriptions" value="@options.Description" class="form-control" />
+                                    <textarea name="Descriptions" id="discriptions" class="form-control"> 
+                                        @options.Description
+                                    </textarea>
                                 </div>
 
                                 <h1>Value & Cost </h1>
@@ -108,7 +117,7 @@
                                         @for (int i = 0; i < ViewBag.CountOptions[r]; i++)
                                         {
                                             f++;
-                                            <input type="text" placeholder="costNGF" @* step="0,01" *@ name="costNGF" value="@ViewBag.OptionValue[f].Cost" class="form-control" />
+                                            <input type="text" placeholder="costNGF" name="costNGF" value="@ViewBag.OptionValue[f].Cost" class="form-control" />
                                         }
                                     </div>
                                     <input type="hidden" id="counter" name="inputCounter" />
@@ -149,11 +158,14 @@
 
     @section Scripts 
     {
-   
         @{
             await Html.RenderPartialAsync("_ValidationScriptsPartial");
         }
         <script>
+
+            tinymce.init({
+                selector: '#discriptions'
+            });
 
             tinymce.init({
                 selector: '#exampleFormControlTextarea1'
@@ -271,7 +283,6 @@
 
                     counter[0].value = counterBlock.length;
 
-                    console.log(counter[0].value);
                 }
             });
 
