--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Hebel.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Hebel.cshtml
@@ -69,6 +69,13 @@
                                     <input name="Options" value="@options.Name" id="opt" class="form-control" />
                                 </div>
                                 <div class="form-group">
+                                    <label class="control-label">Options Image</label>
+                                    <input name="ImageNameOption" type="text" value="@options.ImageName" id="opt" class="form-control" />
+                                    <br />
+                                    <img src="@("/Image/"+@options.ImageName)" height="300" width="300" />
+                                    <br />
+                                </div>
+                                <div class="form-group">
                                     <label class="control-label">Description</label>
                                     <input name="Descriptions" value="@options.Description" class="form-control" />
                                 </div>
